<resources>
    <string name="app_name">Shop.Online</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email_hint">Email</string>
    <string name="hi">HI</string>
    <string name="checkbox">Check Box</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="awww">AWWW</string>
    <string name="yehey">YEHEY</string>
    <string name="login">Login</string>
    <string name="title_activity_select_items">Items</string>
    <string name="total">TOTAL</string>
    <string name="peso_placeholder">PHP 0.0</string>
    <string name="checkout">Checkout</string>
    <string name="title_activity_checkout">Payment Method</string>
    <string name="payment_method">Payment Method</string>
    <string name="continues">Continue</string>
    <string name="dialog_message">Are you sure you want to continue?</string>
    <string name="yes">YES</string>
    <string name="cancel">CANCEL</string>
    <string name="paypal">Paypal</string>
    <string name="paypal_message">Pay using Paypal account. You will be redirected to the Paypal system to complete the payment.</string>
    <string name="credit_debit">Credit / Debit card</string>
    <string name="credi_cards">Saved Credit Card(s)</string>
    <string name="cash_delivery">Cash On Delivery</string>
    <string name="cash_delivery_message">Pay upon receiving your goods from the comfort of your home, workplace or any shipping destination of your choice.</string>
    <string name="payment_message">Processing your payment.</string>
    <string name="thank_you">Successful payment. Thank you for shopping with us.</string>
    <string name="done">DONE</string>
    <string name="package_name">com.ceosilvajr.app.onlineorderingapp</string>
    <string name="password_hint">Password</string>
</resources>
