<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ceosilvajr.app.onlineorderingapp.fragments.CheckoutActivityFragment">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_radio_button"
            android:orientation="horizontal"
            android:padding="10dp">

            <RadioButton
                android:id="@+id/rb_credit_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/credi_cards"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/primary_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/credi_cards"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/secondary_text" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_radio_button"
            android:orientation="horizontal"
            android:padding="10dp">

            <RadioButton
                android:id="@+id/rb_credit_debit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/credit_debit"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/primary_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/credit_debit"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/secondary_text" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_radio_button"
            android:orientation="horizontal"
            android:padding="10dp">

            <RadioButton
                android:id="@+id/rb_cash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cash_delivery"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/primary_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cash_delivery_message"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/secondary_text" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_radio_button"
            android:orientation="horizontal"
            android:padding="10dp">

            <RadioButton
                android:id="@+id/rb_paypal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paypal"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/primary_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paypal_message"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/secondary_text" />

            </LinearLayout>
        </LinearLayout>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/total"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/accent" />

            <TextView
                android:id="@+id/tv_final_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/peso_placeholder"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/accent"
                android:textStyle="bold" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_btn_default_selector"
            android:text="@string/continues"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>
