<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ceosilvajr.app.onlineorderingapp.fragments.SelectItemsActivityFragment">


    <com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout
        android:id="@+id/swipyrefreshlayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:direction="bottom">

        <ListView
            android:id="@+id/lv_items"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/total"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/accent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/peso_placeholder"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/accent"
                android:textStyle="bold" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/blue_btn_default_selector"
            android:text="@string/checkout"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>
